--- a/.github/workflows/terraform-apply-pipeline-ci.yml
+++ b/.github/workflows/terraform-apply-pipeline-ci.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
 
 env:
-  TF_VAR_API_TOKEN: "${{ secrets.TF_VAR_API_TOKEN }}"
+  TF_VAR_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
   CONFIG_DIRECTORY: "./"
   TF_VAR_CLOUD_REGION: "${{secrets.CLOUD_REGION}}"
   TF_VAR_DB_USER: "${{secrets.DB_USER}}"
