--- a/.github/workflows/terraform-plan-pipeline-ci.yml
+++ b/.github/workflows/terraform-plan-pipeline-ci.yml
@@ -2,7 +2,7 @@ name: Terraform Plan
 
 on:
   pull_request:
-    branches: [ "main" ]
+    branches: [ "dev-fiap-001" ]
 
 env:
   TF_VAR_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
