--- a/.github/workflows/terraform-apply-pipeline-ci.yml
+++ b/.github/workflows/terraform-apply-pipeline-ci.yml
@@ -56,5 +56,5 @@ jobs:
         run: exit 1
 
       - name: Terraform Apply
-        if: github.ref == 'dev-fiap-001' && github.event_name == 'push'
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: terraform apply -auto-approve -input=false
