--- a/.github/workflows/terraform-plan-pipeline-ci.yml
+++ b/.github/workflows/terraform-plan-pipeline-ci.yml
@@ -1,8 +1,7 @@
 name: Terraform Plan
 
 on:
-  pull_request:
-    branches: [ "main" ]
+  workflow_call:
 
 env:
   TF_VAR_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
@@ -12,13 +11,14 @@ env:
   TF_VAR_DB_PASSWORD: "${{secrets.DB_PASSWORD}}"
   TF_VAR_DB_DATABASE: "${{secrets.DB_DATABASE}}"
   TF_VAR_DB_HOST: "${{secrets.DB_HOST}}"
+  TF_VAR_IMAGE_NAME: "${{secrets.IMAGE_NAME}}"
   TF_VAR_DB_REGION: "${{secrets.DB_REGION}}"
   TF_VAR_CREDENTIALS: "${{secrets.GCP_CREDENTIALS}}"
   TF_VAR_DB_TIER: "${{secrets.DB_TIER}}"
   TF_VAR_GCP_ID: "${{secrets.GCP_ID}}"
 
 jobs:
-  terraform:
+  plan:
     name: "Terraform"
     runs-on: ubuntu-latest
     permissions:
@@ -84,3 +84,13 @@ jobs:
       - name: Terraform Plan Status
         if: steps.plan.outcome == 'failure'
         run: exit 1
+
+  # Deploy database
+  deploy-db:
+    if: ${{ (github.event_name == 'push' && github.head_ref) || github.event_name == 'pull_request' }}
+    needs: 
+      - plan
+    uses: tshadz-fiap-postech-soat3/terraform-database/.github/workflows/terraform-apply-pipeline-ci.yml@main
+    with:
+      trigger_workflow: true
+    secrets: inherit
