--- a/.github/workflows/terraform-apply-pipeline-ci.yml
+++ b/.github/workflows/terraform-apply-pipeline-ci.yml
@@ -1,8 +1,7 @@
 name: Terraform Apply
 
 on:
-  push:
-    branches: [ "main" ]
+  workflow_call:
 
 env:
   TF_VAR_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
