--- a/.github/workflows/terraform-apply-pipeline-ci.yml
+++ b/.github/workflows/terraform-apply-pipeline-ci.yml
@@ -6,6 +6,7 @@ on:
 env:
   TF_VAR_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
   CONFIG_DIRECTORY: "./"
+  TF_VAR_WORKSPACE: "${{secrets.IMAGE_NAME}}"
   TF_VAR_CLOUD_REGION: "${{secrets.CLOUD_REGION}}"
   TF_VAR_DB_USER: "${{secrets.DB_USER}}"
   TF_VAR_DB_PASSWORD: "${{secrets.DB_PASSWORD}}"
