fix: fix variables

--- a/.github/workflows/terraform-apply-pipeline-ci.yml
+++ b/.github/workflows/terraform-apply-pipeline-ci.yml
@@ -8,13 +8,13 @@ env:
   CONFIG_DIRECTORY: "./"
   TF_VAR_WORKSPACE: "${{secrets.IMAGE_NAME}}"
   TF_VAR_CLOUD_REGION: "${{secrets.CLOUD_REGION}}"
-  TF_VAR_DB_USER: "${{secrets.DB_USER}}"
-  TF_VAR_DB_PASSWORD: "${{secrets.DB_PASSWORD}}"
-  TF_VAR_DB_DATABASE: "${{secrets.DB_DATABASE}}"
-  TF_VAR_DB_HOST: "${{secrets.DB_HOST}}"
-  TF_VAR_DB_REGION: "${{secrets.DB_REGION}}"
+  TF_VAR_DB_USER: "${{secrets.MYSQL_USER}}"
+  TF_VAR_DB_PASSWORD: "${{secrets.MYSQL_PASSWORD}}"
+  TF_VAR_DB_DATABASE: "${{secrets.MYSQL_DATABASE}}"
+  TF_VAR_DB_HOST: "${{secrets.MYSQL_HOST}}"
+  TF_VAR_DB_REGION: "${{secrets.MYSQL_REGION}}"
   TF_VAR_CREDENTIALS: "${{secrets.GCP_CREDENTIALS}}"
-  TF_VAR_DB_TIER: "${{secrets.DB_TIER}}"
+  TF_VAR_DB_TIER: "${{secrets.MYSQL_TIER}}"
   TF_VAR_GCP_ID: "${{secrets.GCP_ID}}"
 
 jobs:
