--- a/.github/workflows/terraform-apply-pipeline-ci.yml
+++ b/.github/workflows/terraform-apply-pipeline-ci.yml
@@ -33,28 +33,42 @@ jobs:
           # terraform_version: 1.4.2
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
+      - name: Format Terraform Files
+        run: terraform fmt -recursive
+        working-directory: ./terraform
+  
       - name: Terraform Format
         id: fmt
-        run: terraform fmt -check
+        run: terraform fmt -check -recursive
+        working-directory: ./terraform
 
+      - name: Set Terraform Workspace
+        working-directory: ./terraform
+        run: |
+          chmod +x set_workspace.sh
+          ./set_workspace.sh
+  
       - name: Terraform Init
         id: init
         run: terraform init
+        working-directory: ./terraform
       
       - name: Terraform Validate
         id: validate
         run: terraform validate -no-color
+        working-directory: ./terraform
 
       - name: Terraform Plan
         id: plan
         if: github.event_name == 'pull_request'
         run: terraform plan -no-color -input=false
-        continue-on-error: true
+        working-directory: ./terraform
+        continue-on-error: false
 
       - name: Terraform Plan Status
         if: steps.plan.outcome == 'failure'
         run: exit 1
 
       - name: Terraform Apply
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        working-directory: ./terraform
         run: terraform apply -auto-approve -input=false
