fix: add missing variable

--- a/.github/workflows/terraform-apply-pipeline-ci.yml
+++ b/.github/workflows/terraform-apply-pipeline-ci.yml
@@ -15,6 +15,7 @@ env:
   TF_VAR_DB_REGION: "${{secrets.MYSQL_REGION}}"
   TF_VAR_CREDENTIALS: "${{secrets.GCP_CREDENTIALS}}"
   TF_VAR_DB_TIER: "${{secrets.MYSQL_TIER}}"
+  TF_VAR_IMAGE_NAME: "${{secrets.IMAGE_NAME}}"
   TF_VAR_GCP_ID: "${{secrets.GCP_ID}}"
 
 jobs:
