--- a/.github/workflows/terraform-apply-pipeline-ci.yml
+++ b/.github/workflows/terraform-apply-pipeline-ci.yml
@@ -12,7 +12,7 @@ env:
   TF_VAR_DB_PASSWORD: "${{secrets.MYSQL_PASSWORD}}"
   TF_VAR_DB_DATABASE: "${{secrets.MYSQL_DATABASE}}"
   TF_VAR_DB_HOST: "${{secrets.MYSQL_HOST}}"
-  TF_VAR_DB_REGION: "${{secrets.MYSQL_REGION}}"
+  TF_VAR_DB_REGION: "${{secrets.CLOUD_REGION}}"
   TF_VAR_CREDENTIALS: "${{secrets.GCP_CREDENTIALS}}"
   TF_VAR_DB_TIER: "${{secrets.MYSQL_TIER}}"
   TF_VAR_IMAGE_NAME: "${{secrets.IMAGE_NAME}}"
