--- a/.github/workflows/terraform-apply-pipeline-ci.yml
+++ b/.github/workflows/terraform-apply-pipeline-ci.yml
@@ -27,6 +27,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          repository: tshadz-fiap-postech-soat3/terraform-database
+          path: terraform
+          ref: main
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
